--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_maps_flutter: ^2.1.5
+  http: ^0.13.4
+  socket_io_client: ^1.0.2
+  geolocator: ^7.7.1
+  timelines: ^0.1.0
+  flutter_polyline_points: ^1.0.0
+  geocoding: ^2.0.4
 
 dev_dependencies:
   flutter_test:
